# mcp-integration

./: CLAUDE.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
data/: comic_books_10000_dataset.csv
src/: agent.py  main.ipynb  main.py  mcp_server_test.py
tests/: test_main.py
