[project]
name = "mcp-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agents>=1.4.0",
    "fastmcp>=3.1.0",
    "mcp>=1.26.0",
    "openai-agents>=0.12.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.9.0",
]
